[tool.poetry]
name = "language-models"
version = "0.1.0"
description = ""
authors = ["Alberto Mur Lopez <amur@unizar.es>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.7"
numpy = "^1.23.4"
gutenberg-cleaner = "^0.1.6"
scikit-learn = "^1.1.3"
pydot = "^1.4.2"
matplotlib = "^3.6.2"
notebook = "^7.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
